documentation/2.0.2/manual/Modules.md
<!-- translated -->
<!--
# Play 2.0 Modules

> This is a temporary location for listing modules, until there will be a location to register them on the Play website.

> Blog posts describing the process of writing a module can be found on [objectify.be](http://www.objectify.be/wordpress/?p=363) and [developer.vz.net](http://developer.vz.net/2012/03/16/writing-a-play-2-0-module/)
-->
# Play 2.0 モジュール

> ここはモジュール一覧が Play ウェブサイト上で登録できるようになるまでの、一時的な公開場所です。

> モジュールを作成するための手順を説明したブログ記事が [objectify.be](http://www.objectify.be/wordpress/?p=363) と [developer.vz.net](http://developer.vz.net/2012/03/16/writing-a-play-2-0-module/) にあります。

<!--
## Authentication and Authorization module (Scala)

* **Website:** [https://github.com/t2v/play20-auth]
* **Documentation(en):** [https://github.com/t2v/play20-auth/blob/master/README.md]
* **Documentation(ja):** [https://github.com/t2v/play20-auth/blob/master/README.ja.md]
* **Short description** This module provides an authentication and authorization way
-->
## Authentication and Authorization モジュール (Scala)

* **Webサイト:** [https://github.com/t2v/play20-auth]
* **ドキュメント(英語):** [https://github.com/t2v/play20-auth/blob/master/README.md]
* **ドキュメント(日本語):** [https://github.com/t2v/play20-auth/blob/master/README.ja.md]
* **説明:** 認証と認可の仕組みを提供するモジュールです。


<!--
## Authenticity Token module

* **Website:** [https://github.com/orefalo/play2-authenticitytoken](https://github.com/orefalo/play2-authenticitytoken)
* **Documentation:** [https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md](https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md)
* **Short description:** Brings back play1 authenticity token - provides a way around CSRF attacks
-->
## Authenticity Token モジュール

* **Webサイト:** [https://github.com/orefalo/play2-authenticitytoken](https://github.com/orefalo/play2-authenticitytoken)
* **ドキュメント:** [https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md](https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md)
* **説明:** Play1 にあった authenticity token を再現するモジュールです。 CSRF 攻撃への対策ができます。

<!--
## Deadbolt 2 Plugin
* **Website (docs, sample):** [https://github.com/schaloner/deadbolt-2](https://github.com/schaloner/deadbolt-2)
* **Short description:** Deadbolt is an authorisation mechanism for defining access rights to certain controller methods or parts of a view using a simple AND/OR/NOT syntax
-->
## Deadbolt 2 プラグイン
* **Webサイト (ドキュメント, サンプル):** [https://github.com/schaloner/deadbolt-2](https://github.com/schaloner/deadbolt-2)
* **説明:** Deadbolt はコントローラのメソッドや、ビューの一部にシンプルな AND/OR/NOT の文法でアクセス権限を定義することで、認可の仕組みを実現できるプラグインです。

<!--
## Dust Plugin
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins/tree/master/dust](https://github.com/typesafehub/play-plugins/tree/master/dust)
* **Short description:** provides support for the dust client side template language
-->
## Dust プラグイン
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins/tree/master/dust](https://github.com/typesafehub/play-plugins/tree/master/dust)
* **説明:** dust というクライアントサイドのテンプレート言語のサポートを追加するプラグインです。

<!--
## Groovy Templates plugin

* **Website:** [https://github.com/manuelbernhardt/play2-groovy-templates](https://github.com/manuelbernhardt/play2-groovy-templates)
* **Documentation:** [https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md](https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md)
* **Short description:** This module brings the Groovy templates engine of Play 1 to Play 2. 
-->
## Groovy Templates プラグイン

* **Webサイト:** [https://github.com/manuelbernhardt/play2-groovy-templates](https://github.com/manuelbernhardt/play2-groovy-templates)
* **ドキュメント:** [https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md](https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md)
* **説明:** Play1 の Groovy テンプレートを Play 2 で利用するためのプラグインです。

<!--
## Groovy Templates plugin - gt-engine-play2

* **Website:** [https://github.com/mbknor/gt-engine-play2](https://github.com/mbknor/gt-engine-play2)
* **Documentation:** [https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown](https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown)
* **Short description:** This module brings the Groovy Template engine from play 1 to Play 2. It uses gt-engine which is used by the Play 1 module "Faster Groovy Templates" [http://www.playframework.org/modules/fastergt](http://www.playframework.org/modules/fastergt)
* **Samples:** [https://github.com/mbknor/gt-engine-play2/tree/master/samples](https://github.com/mbknor/gt-engine-play2/tree/master/samples)
-->
## Groovy Templates プラグイン - gt-engine-play2

* **Webサイト:** [https://github.com/mbknor/gt-engine-play2](https://github.com/mbknor/gt-engine-play2)
* **ドキュメント:** [https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown](https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown)
* **説明:** Play 1 の Groovy テンプレートを Play 2 で利用するためのプラグインです。Play 1 の "Faster Groovy Templates" モジュール [http://www.playframework.org/modules/fastergt](http://www.playframework.org/modules/fastergt) で使われているものと同じ gt-engine を内部的に利用しています。
* **サンプル:** [https://github.com/mbknor/gt-engine-play2/tree/master/samples](https://github.com/mbknor/gt-engine-play2/tree/master/samples)

<!--
## Guice Plugin (Java and Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **Short description:** provides DI via Guice
-->
## Guice プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **説明:** Guice による DI を実現するプラグインです。

<!--
## HTML5 Tags module
* **Website:** [https://github.com/loicdescotte/Play2-HTML5Tags](https://github.com/loicdescotte/Play2-HTML5Tags)
* **Documentation:** [https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md](https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md)
* **Short description:** This tags add client side validation attributes (e.g required, regex pattern, max|min lentgh...) and specific input fields (date, email, url, telephone number,...) to Play 2.0 templates
-->
## HTML5 Tags モジュール
* **Webサイト:** [https://github.com/loicdescotte/Play2-HTML5Tags](https://github.com/loicdescotte/Play2-HTML5Tags)
* **ドキュメント:** [https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md](https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md)
* **説明:** Play 2.0 のテンプレートでクライアントサイド・バリデーション (required、regex パターン, max|min lentghなど) と 特別な入力フィールド (date, email, url, telephone number,...) のタグを使えるようにするモジュールです。

<!--
## Japid module

* **Website:** [https://github.com/branaway/japid42](https://github.com/branaway/japid42)
* **Documentation:** [https://github.com/branaway/japid42](https://github.com/branaway/japid42)
* **Short description:** This module provides Japid java templates for play 2
-->
## Japid モジュール

* **Webサイト:** [https://github.com/branaway/japid42](https://github.com/branaway/japid42)
* **ドキュメント:** [https://github.com/branaway/japid42](https://github.com/branaway/japid42)
* **説明:** Japid Java テンプレートを Play 2 で使えるようにするモジュールです。

<!--
## Manual Dependency Injection Plugin (Java and Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **Short description:** provides DI via manual injection
-->
## Manual Dependency Injection プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **説明:** 手動インジェクションによる DI を実現するプラグインです。

<!--
## MongoDB Jackson Mapper Plugin (Java)

* **Website (docs, sample):** [https://github.com/vznet/play-mongo-jackson-mapper](https://github.com/vznet/play-mongo-jackson-mapper)
* **Short description:** provides managed MongoDB access and object mapping using Jackson annotations
-->
## MongoDB Jackson Mapper プラグイン (Java)

* **Webサイト (ドキュメント, サンプル):** [https://github.com/vznet/play-mongo-jackson-mapper](https://github.com/vznet/play-mongo-jackson-mapper)
* **説明:** MongoDB へのアクセスや Jackson アノテーションによるオブジェクト・マッピングを実現するプラグインです。

<!--
## MongoDB Salat, Casbah Plugin (Scala)
* **Website (docs, sample):** [https://github.com/leon/play-salat](https://github.com/leon/play-salat)
* **Short description:** provides managed MongoDB access and object mapping using Salat and Casbah 
-->
## MongoDB Salat, Casbah プラグイン (Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/leon/play-salat](https://github.com/leon/play-salat)
* **説明:** Salat および Casbah による MongoDB へのアクセスやオブジェクト・マッピングを実現するプラグインです。

<!--
## Play Mini (Java and Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play2-mini](https://github.com/typesafehub/play2-mini)
* **Short description:** uses play as an HTTP library (in a standard SBT project)
-->
## Play Mini (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play2-mini](https://github.com/typesafehub/play2-mini)
* **説明:** (標準的な SBT プロジェクトで) Play を HTTP ライブラリとして使うサンプルです。

<!--
## Redis Plugin  (Java and Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **Short description:** provides a redis based cache implementation, also lets you use Redis specific APIs
-->
## Redis プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **説明:** Redis を利用したキャッシュ API の実装です。Redis 特有の API も利用できます。

<!--
## Emailer Plugin  (Java and Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **Short description:** provides an emailer based on apache commons-email
-->
## Emailer プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **説明:** Apache commons-email による emailer を提供するプラグインです。

<!--
## Roy Compiled Asset Plugin (Ray)
* **Website:** [https://github.com/pufuwozu/ray](https://github.com/pufuwozu/ray)
* **Blog post:** [http://brianmckenna.org/blog/ray](http://brianmckenna.org/blog/ray)
* **Short description:** compiles [Roy](http://roy.brianmckenna.org/) files to JavaScript
-->
## Roy Compiled Asset プラグイン (Ray)
* **Webサイト:** [https://github.com/pufuwozu/ray](https://github.com/pufuwozu/ray)
* **ブログ記事:** [http://brianmckenna.org/blog/ray](http://brianmckenna.org/blog/ray)
* **説明:** [Roy](http://roy.brianmckenna.org/) ファイルを JavaScript にコンパイルします。

<!--
## Snapshot Plugin (Java and Scala)
* **Website (docs, sample):** [https://github.com/vznet/play-snapshot](https://github.com/vznet/play-snapshot)
* **Short description:** provides a hash bang snapshot functionality using HtmlUnit, as described by Google [here](https://developers.google.com/webmasters/ajax-crawling/docs/html-snapshot)
-->
## Snapshot プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/vznet/play-snapshot](https://github.com/vznet/play-snapshot)
* **説明:** HtmlUnit を利用して、 [ここ](https://developers.google.com/webmasters/ajax-crawling/docs/html-snapshot) で Google により解説されている Hashbang Snapshot 機能を実現します。

<!--
## Statsd Plugin (Java and Scala)
* **Website (docs, sample):** [https://github.com/vznet/play-statsd](https://github.com/vznet/play-statsd)
* **Short description:** provides a statsd client
-->
## Statsd プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/vznet/play-statsd](https://github.com/vznet/play-statsd)
* **説明:** statsd クライアントを提供します。client

<!--
## Typesafe util Plugin (Scala)
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **Short description:** provides request header based security and syntactic sugar to deal with plugins
-->
## Typesafe util プラグイン (Scala)
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins](https://github.com/typesafehub/play-plugins)
* **説明:** リクエストヘッダによるセキュリティ機能と、プラグインを管理するためのシンタックスシュガーを提供します。

<!--
## Typesafe SbtGoodies Plugin 
* **Website (docs, sample):** [https://github.com/typesafehub/play-plugins/sbtgoodies](https://github.com/typesafehub/play-plugins/sbtgoodies)
* **Short description:** provides extra sbt commands
-->
## Typesafe SbtGoodies プラグイン 
* **Webサイト (ドキュメント, サンプル):** [https://github.com/typesafehub/play-plugins/sbtgoodies](https://github.com/typesafehub/play-plugins/sbtgoodies)
* **説明:** 追加の sbt コマンドを提供します。

<!--
## WAR Plugin

* **Website:** [https://github.com/dlecan/play2-war-plugin](https://github.com/dlecan/play2-war-plugin)
* **Documentation:** [https://github.com/dlecan/play2-war-plugin/blob/develop/README.md](https://github.com/dlecan/play2-war-plugin/blob/develop/README.md)
* **Short description:** Allow to package Play! 2.x applications into standard WAR packages.
-->
## WAR プラグイン

* **Webサイト:** [https://github.com/dlecan/play2-war-plugin](https://github.com/dlecan/play2-war-plugin)
* **ドキュメント:** [https://github.com/dlecan/play2-war-plugin/blob/develop/README.md](https://github.com/dlecan/play2-war-plugin/blob/develop/README.md)
* **説明:** Play 2.x アプリケーッションを標準的な WAR にパッケージングします。

<!--
## XForward module

* **Website:** [https://github.com/orefalo/play2-xforward](https://github.com/orefalo/play2-xforward)
* **Documentation:** [https://github.com/orefalo/play2-xforward/blob/master/Readme.md](https://github.com/orefalo/play2-xforward/blob/master/Readme.md)
* **Short description:** This module brings back the missing Proxy forwarding settings from Play1.
-->
## XForward モジュール

* **Webサイト* :** [https://github.com/orefalo/play2-xforward](https://github.com/orefalo/play2-xforward)
* **ドキュメント:** [https://github.com/orefalo/play2-xforward/blob/master/Readme.md](https://github.com/orefalo/play2-xforward/blob/master/Readme.md)
* **説明:** Play1 にあったProxy フォワーディングに関する設定を実現するモジュールです。

<!--
## Spring Module 

* **Website:** [https://github.com/scott-phillips/Spring4Play2](https://github.com/scott-phillips/Spring4Play2)
* **Documentation:** [https://github.com/scott-phillips/Spring4Play2/blob/master/README.markdown](https://github.com/scott-phillips/Spring4Play2/blob/master/README.markdown)
* **Short description:** Updated version of the original Spring module for Play 2.0
-->
## Spring モジュール

* **Webサイト:** [https://github.com/scott-phillips/Spring4Play2](https://github.com/scott-phillips/Spring4Play2)
* **ドキュメント:** [https://github.com/scott-phillips/Spring4Play2/blob/master/README.markdown](https://github.com/scott-phillips/Spring4Play2/blob/master/README.markdown)
* **説明:** Play1 にあった Spring モジュールを Play 2.0 向けにアップデートしました。

<!--
## JsMessages

* **Wesite:** [https://github.com/julienrf/play-jsmessages](https://github.com/julienrf/play-jsmessages)
* **Short description:** Allows to compute localized messages on client side.
-->
## JsMessages

* **Webサイト:** [https://github.com/julienrf/play-jsmessages](https://github.com/julienrf/play-jsmessages)
* **説明:** クライアントサイドでメッセージをローカライズします。

<!--
## Memcached Plugin

* **Website:** [https://github.com/mumoshu/play2-memcached](https://github.com/mumoshu/play2-memcached)
* **Short description:** provides a memcached based cache implementation
-->
## Memcached プラグイン

* **Webサイト:** [https://github.com/mumoshu/play2-memcached](https://github.com/mumoshu/play2-memcached)
* **説明:** memcached による Cache API の実装です。

<!--
## Stylus Plugin

* **Website:** [https://github.com/knuton/play-stylus](https://github.com/knuton/play-stylus)
* **Short description:** Support for [Stylus](https://github.com/learnboost/stylus) CSS compilation
-->
## Stylus プラグイン

* **Webサイト:** [https://github.com/knuton/play-stylus](https://github.com/knuton/play-stylus)
* **説明:** [Stylus](https://github.com/learnboost/stylus) による CSS のコンパイルを行います。

<!--
## ScalikeJDBC Plugin (Scala)

* **Website:** [https://github.com/seratch/scalikejdbc-play-plugin](https://github.com/seratch/scalikejdbc-play-plugin)
* **Short description:** provides yet another database access API for Play20
-->
## ScalikeJDBC プラグイン (Scala)

* **Webサイト:** [https://github.com/seratch/scalikejdbc-play-plugin](https://github.com/seratch/scalikejdbc-play-plugin)
* **説明:** さらにもう一つの Play20 向けデータベースアクセス APIです。
