documentation/2.1.0/manual/Modules.md
<!-- translated -->
<!--
# Play 2.0 Modules
-->
# Play 2.0 モジュール

<!--
> This is a temporary location for listing modules, until there will be a location to register them on the Play website.

> Blog posts describing the process of writing a module can be found on [objectify.be](http://www.objectify.be/wordpress/?p=363).
-->
> ここはモジュール一覧が Play ウェブサイト上で登録できるようになるまでの、一時的な公開場所です。
 
> モジュールを作成するための手順を説明したブログ記事が [objectify.be](http://www.objectify.be/wordpress/?p=363) にあります。

<!--
## Airbrake.io notifier
-->
## Airbrake.io notifier

<!--
* **Website:** <http://teamon.github.com/play-airbrake/>
* **Documentation:** <https://github.com/teamon/play-airbrake/blob/master/README.md>
* **Short description:** Send exception notifications to airbrake.io
-->
* **Webサイト:** <http://teamon.github.com/play-airbrake/>
* **ドキュメント:** <https://github.com/teamon/play-airbrake/blob/master/README.md>
* **説明:** airbrake.io に例外通知を送信します

<!--
## Amazon STS module (Scala)
-->
## Amazon STS モジュール (Scala)

<!--
* **Website:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/sts>
* **Documentation:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/sts/README.md>
* **Short description:** STS (Security Token Service) API wrapper for Play 2.0
-->
* **Webサイト:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/sts>
* **ドキュメント:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/sts/README.md>
* **説明:** Play 2.0 用の STS (Security Token Service) API ラッパー

<!--
## Amazon SES module (Scala)
-->
## Amazon SES モジュール (Scala)

<!--
* **Website:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/ses>
* **Documentation:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/ses/README.md>
* **Short description:** SES (Simple Email Service) API wrapper for Play 2.0
-->
* **Webサイト:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/ses>
* **ドキュメント:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/ses/README.md>
* **説明:** Play 2.0 用の SES (Simple Email Service) API ラッパー

<!--
## Amazon S3 module (Scala)
-->
## Amazon S3 モジュール (Scala)

<!--
* **Website:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/s3>
* **Documentation:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/s3/README.md>
* **Short description:** S3 (Simple Storage Service) API wrapper for Play 2.0
-->
* **Webサイト:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/s3>
* **ドキュメント:** <https://github.com/Rhinofly/play-libraries/tree/master/apis/s3/README.md>
* **説明:** Play 2.0 用の S3 (Simple Storage Service) API ラッパー

<!--
## Amf module (Scala)
-->
## Amf モジュール (Scala)

<!--
* **Website:** <https://github.com/Rhinofly/play-libraries/tree/master/amf>
* **Documentation:** <https://github.com/Rhinofly/play-libraries/blob/master/amf/README.md>
* **Short description:** AMF (ActionScript Message Format) support for Play 2.0
-->
* **Webサイト:** <https://github.com/Rhinofly/play-libraries/tree/master/amf>
* **ドキュメント:** <https://github.com/Rhinofly/play-libraries/blob/master/amf/README.md>
* **説明:** Play 2.0 の AMF (ActionScript Message Format) サポート

<!--
## Authentication and Authorization module (Scala)
-->
## Authentication and Authorization モジュール (Scala)

<!--
* **Website:** <https://github.com/t2v/play20-auth>
* **Documentation(en):** <https://github.com/t2v/play20-auth/blob/master/README.md>
* **Documentation(ja):** <https://github.com/t2v/play20-auth/blob/master/README.ja.md>
* **Short description** This module provides an authentication and authorization way
* Now also has 2.1-SNAPSHOT support: <https://github.com/t2v/play20-auth/tree/play21>
-->
* **Webサイト:** <https://github.com/t2v/play20-auth>
* **ドキュメント(英語):** <https://github.com/t2v/play20-auth/blob/master/README.md>
* **ドキュメント(日本語):** <https://github.com/t2v/play20-auth/blob/master/README.ja.md>
* **説明:** 認証と認可の仕組みを提供するモジュールです。
* 2.1-SNAPSHOT 対応もしました: <https://github.com/t2v/play20-auth/tree/play21>

<!--
## Authenticity Token module
-->
## Authenticity Token モジュール

<!--
* **Website:** <https://github.com/orefalo/play2-authenticitytoken>
* **Documentation:** <https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md>
* **Short description:** Brings back play1 authenticity token - provides a way around CSRF attacks
-->
* **Webサイト:** <https://github.com/orefalo/play2-authenticitytoken>
* **ドキュメント:** <https://github.com/orefalo/play2-authenticitytoken/blob/master/README.md>
* **説明:** Play1 にあった authenticity token を再現するモジュールです。 CSRF 攻撃への対策ができます。

<!--
## Cache Utilities
* **Website:** <http://hakandilek.github.com/play2-cache/>
* **Documentation:** <https://github.com/hakandilek/play2-cache/blob/master/README.md>
* **Repository:** <http://hakandilek.github.com/play2-cache/releases/>
* **Repository(snapshot):** <http://hakandilek.github.com/play2-cache/snapshots/>
* **Short description:** Utilities for simplifying caching
-->
## Cache ユーティリティ
* **Webサイト:** <http://hakandilek.github.com/play2-cache/>
* **ドキュメント:** <https://github.com/hakandilek/play2-cache/blob/master/README.md>
* **リポジトリ:** <http://hakandilek.github.com/play2-cache/releases/>
* **リポジトリ(スナップショット):** <http://hakandilek.github.com/play2-cache/snapshots/>
* **説明:** キャッシュを簡略化するユーティリティ

<!--
## Cloudfront module (Scala)
-->
## Cloudfront モジュール (Scala)

<!--
* **Website:** <https://github.com/mchv/play2-cloudfront>
* **Documentation:** <https://github.com/mchv/play2-cloudfront/blob/master/README.md>
* **Short description** This module helps to integrate a play application with Cloudfront CDN. 
-->
* **Webサイト:** <https://github.com/mchv/play2-cloudfront>
* **ドキュメント:** <https://github.com/mchv/play2-cloudfront/blob/master/README.md>
* **説明** Play アプリケーションの Cloudfront CDN との統合を補助します

<!--
## Deadbolt 2 Plugin
* **Website (docs, sample):** <https://github.com/schaloner/deadbolt-2>
* **Short description:** Deadbolt is an authorisation mechanism for defining access rights to certain controller methods or parts of a view using a simple AND/OR/NOT syntax
-->
## Deadbolt 2 プラグイン
* **Webサイト (ドキュメント, サンプル):** <https://github.com/schaloner/deadbolt-2>
* **説明:** Deadbolt はコントローラのメソッドや、ビューの一部にシンプルな AND/OR/NOT の文法でアクセス権限を定義することで、認可の仕組みを実現できるプラグインです。

<!--
## DDSL Plugin - Dynamic Distributed Service Locator
* **Website (docs, sample):** <https://github.com/mbknor/ddsl-play2-module>
* **Short description:** DDSL - Dynamic Distributed Service Locator - Makes it really easy to create your own dynamic "private cloud" in-house or on EC2/Joyent etc using ZooKeeper
-->
## DDSL プラグイン - 動的分散サービスロケータ
* **Webサイト (ドキュメント, サンプル):** <https://github.com/mbknor/ddsl-play2-module>
* **説明:** DDSL - 動的分散サービスロケータ - を使うと非常に簡単に動的な「プライベートクラウド」を、社内や EC2/Joyent 等に ZooKeeper を使って構築できます

<!--
## Dust Plugin
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins/tree/master/dust>
* **Short description:** provides support for the dust client side template language
-->
## Dust プラグイン
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins/tree/master/dust>
* **説明:** dust というクライアントサイドのテンプレート言語のサポートを追加するプラグインです。

<!--
## Elasticsearch
-->
## Elasticsearch

<!--
* **Website:** <https://github.com/cleverage/play2-elasticsearch>
* **Documentation:** <https://github.com/cleverage/play2-elasticsearch/blob/master/README.md>
* **Repository:** <http://cleverage.github.com/play2-elasticsearch/releases/>
* **Short description** Indexing/Requesting Object in Embedded ElasticSearch Server or remote(s) Node(s). 
-->
* **Webサイト:** <https://github.com/cleverage/play2-elasticsearch>
* **ドキュメント:** <https://github.com/cleverage/play2-elasticsearch/blob/master/README.md>
* **リポジトリ:** <http://cleverage.github.com/play2-elasticsearch/releases/>
* **説明** 組み込みの ElasticSearch サーバおよびリモートノードにあるオブジェクトのインデックス化/リクエスト

<!--
## funcy - Page Driven Functional Tests (Java)
-->
## funcy - ページ駆動機能テスト (Java)

<!--
* **Website:** <https://github.com/joergviola/funcy>
* **Documentation:** <https://github.com/joergviola/funcy/blob/master/README.md>
* **Repository:** <http://joergviola.github.com/releases/>
* **Short description** Simplifies writing functional test using Page Driver classes.
-->
* **Webサイト:** <https://github.com/joergviola/funcy>
* **ドキュメント:** <https://github.com/joergviola/funcy/blob/master/README.md>
* **リポジトリ:** <http://joergviola.github.com/releases/>
* **説明** Page Driver クラスを使って機能テストの作成を簡単にします

<!--
## Groovy Templates plugin
-->
## Groovy Templates プラグイン

<!--
* **Website:** <https://github.com/manuelbernhardt/play2-groovy-templates>
* **Documentation:** <https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md>
* **Short description:** This module brings the Groovy templates engine of Play 1 to Play 2. 
-->
* **Webサイト:** <https://github.com/manuelbernhardt/play2-groovy-templates>
* **ドキュメント:** <https://github.com/manuelbernhardt/play2-groovy-templates/blob/master/README.md>
* **説明:** Play1 の Groovy テンプレートを Play 2 で利用するためのプラグインです。

<!--
## Groovy Templates plugin - gt-engine-play2
-->
## Groovy Templates プラグイン - gt-engine-play2

<!--
* **Website:** <https://github.com/mbknor/gt-engine-play2>
* **Documentation:** <https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown>
* **Short description:** This module brings the Groovy Template engine from play 1 to Play 2. It uses gt-engine which is used by the Play 1 module "Faster Groovy Templates" <http://www.playframework.org/modules/fastergt>
* **Samples:** <https://github.com/mbknor/gt-engine-play2/tree/master/samples>
-->
* **Webサイト:** <https://github.com/mbknor/gt-engine-play2>
* **ドキュメント:** <https://github.com/mbknor/gt-engine-play2/blob/master/README.markdown>
* **説明:** Play 1 の Groovy テンプレートを Play 2 で利用するためのプラグインです。Play 1 の "Faster Groovy Templates" モジュール <http://www.playframework.org/modules/fastergt> で使われているものと同じ gt-engine を内部的に利用しています。
* **サンプル:** <https://github.com/mbknor/gt-engine-play2/tree/master/samples>

<!--
## Guice Plugin (Java and Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins/tree/master/guice>
* **Short description:** provides DI via Guice
-->
## Guice プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins/tree/master/guice>
* **説明:** Guice による DI を実現するプラグインです。

<!--
## HTML5 Tags module (Java and Scala)
* **Website:** <https://github.com/loicdescotte/Play2-HTML5Tags>
* **Documentation:** <https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md>
* **Short description:** This tags add client side validation capabilities, based on model contraints (e.g required, email pattern, max|min lentgh...) and specific input fields (date, telephone number, url...) to Play 2.0 templates
-->
## HTML5 Tags モジュール (Java および Scala)
* **Webサイト:** <https://github.com/loicdescotte/Play2-HTML5Tags>
* **ドキュメント:** <https://github.com/loicdescotte/Play2-HTML5Tags/blob/master/README.md>
* **説明:** Play 2.0 のテンプレートでモデルの制約によるクライアントサイド・バリデーション (required、regex パターン, max|min lentghなど) と 特別な入力フィールド (date, telephone number, url...) のタグを使えるようにするモジュールです。

<!--
## InputValidator (Scala)
-->
## InputValidator (Scala)

<!--
* **Website:** <https://github.com/seratch/inputvalidator/tree/master/play-module>
* **Short description:** provides a simple validation API for Play20
-->
* **Webサイト:** <https://github.com/seratch/inputvalidator/tree/master/play-module>
* **説明:** Play20 用の簡単なバリデーション API を提供します

<!--
## Japid module
-->
## Japid モジュール

<!--
* **Website:** <https://github.com/branaway/japid42>
* **Documentation:** <https://github.com/branaway/japid42>
* **Short description:** This module provides Japid java templates for play 2
-->
* **Webサイト:** <https://github.com/branaway/japid42>
* **ドキュメント:** <https://github.com/branaway/japid42>
* **説明:** Japid Java テンプレートを Play 2 で使えるようにするモジュールです。

<!--
## JsMessages
-->
## JsMessages

<!--
* **Wesite:** <https://github.com/julienrf/play-jsmessages>
* **Short description:** Allows to compute localized messages on client side.
-->
* **Webサイト:** <https://github.com/julienrf/play-jsmessages>
* **説明:** クライアントサイドでメッセージをローカライズします。

<!--
## JSON minification Plugin
-->
## JSON minification プラグイン

<!--
* **Website:** <https://github.com/joscha/play-jsonminify>
* **Documentation:** <https://github.com/joscha/play-jsonminify/blob/master/README.md>
* **Short description:** Allows JSON asset pretty-printing and minification
-->
* **Webサイト:** <https://github.com/joscha/play-jsonminify>
* **ドキュメント:** <https://github.com/joscha/play-jsonminify/blob/master/README.md>
* **説明:** JSON アセットの pretty-print と minify を可能にします

<!--
## Manual Dependency Injection Plugin (Java and Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins>
* **Short description:** provides DI via manual injection
-->
## Manual Dependency Injection プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins>
* **説明:** 手動インジェクションによる DI を実現するプラグインです。

<!--
## Memcached Plugin
-->
## Memcached プラグイン

<!--
* **Website:** <https://github.com/mumoshu/play2-memcached>
* **Short description:** provides a memcached based cache implementation
-->
* **Webサイト:** <https://github.com/mumoshu/play2-memcached>
* **説明:** memcached による Cache API の実装です。

<!--
## MongoDB Jackson Mapper Plugin (Java)
-->
## MongoDB Jackson Mapper プラグイン (Java)

<!--
* **Website (docs, sample):** <https://github.com/vznet/play-mongo-jackson-mapper>
* **Short description:** provides managed MongoDB access and object mapping using Jackson annotations
-->
* **Webサイト (ドキュメント, サンプル):** <https://github.com/vznet/play-mongo-jackson-mapper>
* **説明:** MongoDB へのアクセスや Jackson アノテーションによるオブジェクト・マッピングを実現するプラグインです。

<!--
## MongoDB Jongo Plugin (Java)
* **Website (docs, sample):** <https://github.com/alexanderjarvis/play-jongo>
* **Short description:** provides managed MongoDB access and object mapping using [Jongo](http://jongo.org/)
-->
## MongoDB Jongo プラグイン (Java)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/alexanderjarvis/play-jongo>
* **説明:** [Jongo](http://jongo.org/) を使って MongoDB のアクセスとオブジェクトマッピングを提供します

<!--
## MongoDB Morphia Plugin (Java)
* **Website (docs, sample):** <https://github.com/leodagdag/play2-morphia-plugin>
* **Short description:** provides managed MongoDB access and object mapping via Morphia
-->
## MongoDB Morphia プラグイン (Java)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/leodagdag/play2-morphia-plugin>
* **説明:** Morphia を使って MongoDB のアクセスとオブジェクトマッピングを提供します

<!--
## MongoDB Salat, Casbah Plugin (Scala)
* **Website (docs, sample):** <https://github.com/leon/play-salat>
* **Short description:** provides managed MongoDB access and object mapping using Salat and Casbah 
-->
## MongoDB Salat, Casbah プラグイン (Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/leon/play-salat>
* **説明:** Salat および Casbah による MongoDB へのアクセスやオブジェクト・マッピングを実現するプラグインです。

<!--
## Mountable routing
-->
## Mountable routing

<!--
* **Website:** <http://teamon.github.com/play-navigator/>
* **Documentation:** <https://github.com/teamon/play-navigator/blob/master/README.md>
* **Description:** <http://codetunes.com/2012/05/09/scala-dsl-tutorial-writing-web-framework-router>
-->
* **Webサイト:** <http://teamon.github.com/play-navigator/>
* **ドキュメント:** <https://github.com/teamon/play-navigator/blob/master/README.md>
* **説明:** <http://codetunes.com/2012/05/09/scala-dsl-tutorial-writing-web-framework-router>

<!--
## Mustache (Java,Scala)
-->
## Mustache (Java,Scala)

<!--
* **Website:** <https://github.com/julienba/play2-mustache>
* **Documentation:** <https://github.com/julienba/play2-mustache>
* **Short description:** Mustache template support
-->
* **Webサイト:** <https://github.com/julienba/play2-mustache>
* **ドキュメント:** <https://github.com/julienba/play2-mustache>
* **説明:** Mustache テンプレートサポート

<!--
## Native Packaging Module
-->
## Native Packaging モジュール

<!--
* **Website:** <https://github.com/kryptt/play2-native-packager-plugin>
* **Documentation:** <https://github.com/kryptt/play2-native-packager-plugin/blob/master/README.md>
* **Short description:** Allow to package Play! 2.x applications as a standard system package (deb/rpm/msi).
-->
* **Webサイト:** <https://github.com/kryptt/play2-native-packager-plugin>
* **ドキュメント:** <https://github.com/kryptt/play2-native-packager-plugin/blob/master/README.md>
* **説明:** Play! 2.x アプリケーションを通常のシステムパッケージ (deb/rpm/msi) としてパッケージング可能にします

<!--
## NINA (Scala)
* **Website (docs, sample):** <https://github.com/dontcare4free/nina>
* **Short description:** provides a typesafe way to query SQL databases with a special emphasis on selective querying
-->
## NINA (Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/dontcare4free/nina>
* **説明:** selective querying を重視した、型安全な SQL データベース問い合わせを提供します

<!--
## PDF module (Java)
-->
## PDF モジュール (Java)

<!--
* **Website:** <https://github.com/joergviola/play20-pdf>
* **Documentation:** <https://github.com/joergviola/play20-pdf/blob/master/README.md>
* **Repository:** <http://joergviola.github.com/releases/>
* **Short description** Generate PDF output from HTML templates
-->
* **Webサイト:** <https://github.com/joergviola/play20-pdf>
* **ドキュメント:** <https://github.com/joergviola/play20-pdf/blob/master/README.md>
* **リポジトリ:** <http://joergviola.github.com/releases/>
* **説明** HTML テンプレートから PDF を生成します

<!--
## Play! Authenticate (Java)
-->
## Play! Authenticate (Java)

<!--
* **Website:** <http://joscha.github.com/play-authenticate/>
* **Documentation:** <https://github.com/joscha/play-authenticate/blob/master/README.md>
* **Short description:** A highly customizable authentication module for Play 2.0
-->
* **Webサイト:** <http://joscha.github.com/play-authenticate/>
* **ドキュメント:** <https://github.com/joscha/play-authenticate/blob/master/README.md>
* **説明:** Play 2.0 用の高度にカスタマイズ可能な認証モジュール

<!--
## Play Mini (Java and Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play2-mini>
* **Short description:** uses play as an HTTP library (in a standard SBT project)
-->
## Play Mini (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play2-mini>
* **説明:** (標準的な SBT プロジェクトで) Play を HTTP ライブラリとして使うサンプルです。

<!--
## Play Plovr Plugin
* **Website (docs, sample):** <https://github.com/benmccann/play-plovr-plugin>
* **Short description:** Adds Closure Compiler and Closure Library support to Play
-->
## Play Plovr プラグイン
* **Webサイト (ドキュメント, サンプル):** <https://github.com/benmccann/play-plovr-plugin>
* **説明:** Play に Closure Compiler と Closure Library サポートを提供します

<!--
## Pusher
* **Website:** https://github.com/tindr/Play2Pusher
* **Short description:** Easily interact with the [Pusher Service](http://www.pusher.com) within 
your Play 2 application.
-->
## Pusher
* **Webサイト:** https://github.com/tindr/Play2Pusher
* **説明:** [Pusher Service](http://www.pusher.com) を Play 2 から簡単にやりとりします

<!--
## Qunit (Java)
-->
## Qunit (Java)

<!--
* **Website:** <https://github.com/gcusnieux/play20-qunit>
* **Documentation:** <https://github.com/gcusnieux/play20-qunit>
* **Short description:** JavaScript unit test suite
-->
* **Webサイト:** <https://github.com/gcusnieux/play20-qunit>
* **ドキュメント:** <https://github.com/gcusnieux/play20-qunit>
* **説明:** JavaScript のユニットテストスイート

<!--
## Redis Plugin  (Java and Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins>
* **Short description:** provides a redis based cache implementation, also lets you use Redis specific APIs
-->
## Redis プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins>
* **説明:** Redis を利用したキャッシュ API の実装です。Redis 特有の API も利用できます。

<!--
## Swaggerkit (Scala)
* **Website (docs, sample, code):** https://github.com/eamelink/swaggerkit
* **Short description:** Helps you expose a [Swagger](http://swagger.wordnik.com/) specification of a JSON REST API built with Play in a clean way.
-->
## Swaggerkit (Scala)
* **Webサイト (ドキュメント, サンプル, コード):** https://github.com/eamelink/swaggerkit
* **説明:** Play で作れられた JSON REST API の [Swagger](http://swagger.wordnik.com/) 仕様をクリーンな形で公開するのを手助けします

<!--
## Emailer Plugin  (Java and Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins>
* **Short description:** provides an emailer based on apache commons-email
-->
## Emailer プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins>
* **説明:** Apache commons-email による emailer を提供するプラグインです。

<!--
## Roy Compiled Asset Plugin (Ray)
* **Website:** <https://github.com/pufuwozu/ray>
* **Blog post:** <http://brianmckenna.org/blog/ray>
* **Short description:** compiles [Roy](http://roy.brianmckenna.org/) files to JavaScript
-->
## Roy Compiled Asset プラグイン (Ray)
* **Webサイト:** <https://github.com/pufuwozu/ray>
* **ブログ記事:** <http://brianmckenna.org/blog/ray>
* **説明:** [Roy](http://roy.brianmckenna.org/) ファイルを JavaScript にコンパイルします。

<!--
## Sass Plugin
* **Website:** <https://github.com/jlitola/play-sass>
* **Short description:** Asset handling for [Sass](http://sass-lang.com/) files
-->
## Sass プラグイン
* **Webサイト:** <https://github.com/jlitola/play-sass>
* **説明:** [Sass](http://sass-lang.com/) ファイルのアセットハンドリング

<!--
## ScalikeJDBC Plugin (Scala)
-->
## ScalikeJDBC プラグイン (Scala)

<!--
* **Website:** <https://github.com/seratch/scalikejdbc/tree/master/scalikejdbc-play-plugin>
* **Short description:** provides yet another database access API for Play20
-->
* **Webサイト:** <https://github.com/seratch/scalikejdbc/tree/master/scalikejdbc-play-plugin>
* **説明:** さらにもう一つの Play20 向けデータベースアクセス APIです。

<!--
## SecureSocial (Java and Scala)
-->
## SecureSocial (Java および Scala)

<!--
* **Website:** <http://www.securesocial.ws/>
* **Short description:** An authentication module supporting OAuth, OAuth2, OpenID, Username/Password and custom authentication schemes.
-->
* **Webサイト:** <http://www.securesocial.ws/>
* **説明:** OAuth, OAuth2, OpenID, Username/Password およびカスタム認証スキームをサポートした認証モジュール
 
<!--
## Session cache (Scala)
-->
## Session cache (Scala)

<!--
* **Website:** <https://github.com/Rhinofly/play-libraries/tree/master/session-cache>
* **Documentation:** <https://github.com/Rhinofly/play-libraries/tree/master/session-cache/README.md>
* **Short description:** Session cache for Play 2.0 
-->
* **Webサイト:** <https://github.com/Rhinofly/play-libraries/tree/master/session-cache>
* **ドキュメント:** <https://github.com/Rhinofly/play-libraries/tree/master/session-cache/README.md>
* **説明:** Play 2.0 用のセッションキャッシュ

<!--
## Snapshot Plugin (Java and Scala)
* **Website (docs, sample):** <https://github.com/vznet/play-snapshot>
* **Short description:** provides a hash bang snapshot functionality using HtmlUnit, as described by Google [here](https://developers.google.com/webmasters/ajax-crawling/docs/html-snapshot)
-->
## Snapshot プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/vznet/play-snapshot>
* **説明:** HtmlUnit を利用して、 [ここ](https://developers.google.com/webmasters/ajax-crawling/docs/html-snapshot) で Google により解説されている Hashbang Snapshot 機能を実現します。

<!--
## socket.io.play (scala only, pre-alpha)
-->
## socket.io.play (scala only, pre-alpha)

<!--
* **Website:** <https://github.com/rohit-tingendab/socket.io.play>
* **Documentation:** <https://github.com/rohit-tingendab/socket.io.play/blob/master/README.md>
-->
* **Webサイト:** <https://github.com/rohit-tingendab/socket.io.play>
* **ドキュメント:** <https://github.com/rohit-tingendab/socket.io.play/blob/master/README.md>

<!--
## Spring Module 
-->
## Spring モジュール

<!--
* **Website:** <https://github.com/wsargent/play-2.0-spring-module>
* **Documentation:** <https://github.com/wsargent/play-2.0-spring-module/blob/master/README.md>
* **Short description:** Updated version of the original Spring module for Play 2.0
-->
* **Webサイト:** <https://github.com/wsargent/play-2.0-spring-module>
* **ドキュメント:** <https://github.com/wsargent/play-2.0-spring-module/blob/master/README.md>
* **説明:** Play1 にあった Spring モジュールを Play 2.0 向けにアップデートしました。

<!--
## Stateless client authentication (Scala)
* **Website:** <https://github.com/blendlabs/play20-stateless-auth>
* **Documentation:** <https://github.com/blendlabs/play20-stateless-auth/blob/master/README.md>
* **Short description** Provides required and optional authentication without requiring server-side state (signed auth data is stored on the client)
-->
## ステートレスクライアント認証 (Scala)
* **Webサイト:** <https://github.com/blendlabs/play20-stateless-auth>
* **ドキュメント:** <https://github.com/blendlabs/play20-stateless-auth/blob/master/README.md>
* **説明** サーバーサイドの状態を必要とせずに必須/オプショナルな認証を提供します(署名付きの認証データはクライアントに保存されます)

<!--
## Statsd Plugin (Java and Scala)
* **Website (docs, sample):** <https://github.com/vznet/play-statsd>
* **Short description:** provides a statsd client
-->
## Statsd プラグイン (Java および Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/vznet/play-statsd>
* **説明:** statsd クライアントを提供します。

<!--
## Stylus Plugin
-->
## Stylus プラグイン

<!--
* **Website:** <https://github.com/patiencelabs/play-stylus>
* **Short description:** Support for [Stylus](https://github.com/learnboost/stylus) CSS compilation
-->
* **Webサイト:** <https://github.com/patiencelabs/play-stylus>
* **説明:** [Stylus](https://github.com/learnboost/stylus) による CSS のコンパイルを行います。

<!--
## Typesafe util Plugin (Scala)
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins>
* **Short description:** provides request header based security and syntactic sugar to deal with plugins
-->
## Typesafe util プラグイン (Scala)
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins>
* **説明:** リクエストヘッダによるセキュリティ機能と、プラグインを管理するためのシンタックスシュガーを提供します。

<!--
## Typesafe SbtGoodies Plugin 
* **Website (docs, sample):** <https://github.com/typesafehub/play-plugins/tree/master/sbtgoodies>
* **Short description:** provides extra sbt commands
-->
## Typesafe SbtGoodies プラグイン 
* **Webサイト (ドキュメント, サンプル):** <https://github.com/typesafehub/play-plugins/tree/master/sbtgoodies>
* **説明:** 追加の sbt コマンドを提供します。

<!--
## TypeScript Plugin
* **Website:** <https://github.com/mumoshu/play2-typescript>
* **Short description:** Asset handling for [TypeScript](http://www.typescriptlang.org/) files
-->
## TypeScript プラグイン
* **Webサイト:** <https://github.com/mumoshu/play2-typescript>
* **説明:** [TypeScript](http://www.typescriptlang.org/) ファイルのアセットハンドリング

<!--
## WAR Module
-->
## WAR モジュール

<!--
* **Website:** <https://github.com/dlecan/play2-war-plugin>
* **Documentation:** <https://github.com/dlecan/play2-war-plugin/blob/develop/README.md>
* **Short description:** Allow to package Play! 2.x applications into standard WAR packages.
-->
* **Webサイト:** <https://github.com/dlecan/play2-war-plugin>
* **ドキュメント:** <https://github.com/dlecan/play2-war-plugin/blob/develop/README.md>
* **説明:** Play 2.x アプリケーションを標準的な WAR にパッケージングします。

<!--
## XForward module
-->
## XForward モジュール

<!--
* **Website:** <https://github.com/orefalo/play2-xforward>
* **Documentation:** <https://github.com/orefalo/play2-xforward/blob/master/Readme.md>
* **Short description:** This module brings back the missing Proxy forwarding settings from Play1.
-->
* **Webサイト* :** <https://github.com/orefalo/play2-xforward>
* **ドキュメント:** <https://github.com/orefalo/play2-xforward/blob/master/Readme.md>
* **説明:** Play1 にあったProxy フォワーディングに関する設定を実現するモジュールです。

<!--
## XWiki Rendering module (Scala)
-->
## XWiki Rendering モジュール (Scala)

<!--
* **Website:** http://literalice.github.com/play-xwiki-rendering/
* **Documentation:** https://github.com/literalice/play-xwiki-rendering/
* **Short description:** XWiki Rendering Framework integration for Play 2.0
-->
* **Webサイト:** http://literalice.github.com/play-xwiki-rendering/
* **ドキュメント:** https://github.com/literalice/play-xwiki-rendering/
* **説明:** Play 2.0 向けの XWiki Rendering Framework の統合

<!--
## Origami: OrientDB O/G Mapper (Java and Scala)
* **Website:** [For Play2.1.X](https://github.com/sgougi/play21-origami-plugin) / [For Play2.0.X](https://github.com/sgougi/play20-origami-plugin) 
* **Documentation:** [For Play2.1.X](https://github.com/sgougi/play21-origami-plugin#what-is-origami) / [For Play2.0.4.X](https://github.com/sgougi/play20-origami-plugin#what-is-origami)
* **Short description:** Origami plugin is a Java O/G mapper for the OrientDB with Play! Framework 2.
-->
## Origami: OrientDB O/G Mapper (Java および Scala)
* **Webサイト:** [For Play2.1.X](https://github.com/sgougi/play21-origami-plugin) / [For Play2.0.X](https://github.com/sgougi/play20-origami-plugin) 
* **ドキュメント:** [For Play2.1.X](https://github.com/sgougi/play21-origami-plugin#what-is-origami) / [For Play2.0.4.X](https://github.com/sgougi/play20-origami-plugin#what-is-origami)
* **説明:** Origami plugin は Play! Framework 2 用の OrientDB の Java O/G mapper です
